Scroll fix. Reasonable commit

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <h2>Eagle Scout</h2>
                 <p>I consider my life as an Eagle Scout to be among the most important. Becoming an Eagle Scout took a decade of my life. Long trips—canoeing in Minesota , trekking in Northern Sweden, it taught me – a spoiled kid – that I couldn't simply complain to make my way out of discomfort. I learned to work really hard, for a long period of time. I consider Scouting to be my source of grit, determination, and willpower.</p>
             </div>
+        </div>
 
         <div class="card" data-card="4">
             <div class="card-content">
