--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 
         <div class="card" data-card="1">
             <div class="card-content">
+                <img
+                    class="hero-photo"
+                    src="public/images/FrontalPhotoOfMe.png"
+                    alt="Portrait of Charles Freidenreich"
+                    width="512" height="512"
+                    decoding="async"
+                    loading="eager"
+                />
                 <h1>Charles Freidenreich</h1>
                 <p>I've always been curious about how things work, especially how businesses make decisions. I spend my time learning about difficult problems, AI, politics, and business. I also enjoy going on really hard hikes. My record is 29 miles & 15,000ft in a day.</p>
             </div>
@@ -34,6 +42,14 @@
             <div class="card-content">
                 <h2>Eagle Scout</h2>
                 <p>I consider my life as an Eagle Scout to be among the most important. Becoming an Eagle Scout took a decade of my life. Long trips—canoeing in Minesota , trekking in Northern Sweden, it taught me – a spoiled kid – that I couldn't simply complain to make my way out of discomfort. I learned to work really hard, for a long period of time. I consider Scouting to be my source of grit, determination, and willpower.</p>
+                <figure class="wide-media">
+                    <img
+                        src="public/images/EagleScoutProject.png"
+                        alt="Eagle Scout project"
+                        decoding="async"
+                        loading="lazy"
+                    />
+                </figure>
             </div>
         </div>
 
@@ -41,6 +57,16 @@
             <div class="card-content">
                 <h2>Outdoors</h2>
                 <p>I spent a lot of time outdoors as a Scout – I still do – but as I get older I realize what it means to me. I deeply care about the outdors, and being able to spend time in remote areas of it helps make me who I am. There's nothing quite like almost dying on a cliff side with your closest friends, or getting sniffed by a black bear in the middle of the night.</p>
+                <div class="media-grid">
+                    <figure class="image-card">
+                        <img
+                            src="public/images/SwedenNaturePhoto.png"
+                            alt="Northern Sweden nature scene"
+                            decoding="async"
+                            loading="lazy"
+                        />
+                    </figure>
+                </div>
             </div>
         </div>
 
@@ -141,5 +167,5 @@
           ::::::::::::::+&&&&&$XXx+;:::::X$$$$$$$x+;:::::::::::::::::::          
           :::::::::::::::xXXx+;::::::::::::;;+x+++;::::::::::::::::::::          
           :::::::::::::::xXx+::::::::::::::::::::::::::::::::::::::::::          
-
+A Charles Freidenreich creation. Enjoy your stay.
 -->  
