--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="card-content">
                 <img
                     class="hero-photo"
-                    src="https://i.postimg.cc/D8pP2hvx/Frontal-Photo-Of-Me.png"
+                    src="public/images/FrontalPhotoOfMe.png"
                     alt="Portrait of Charles Freidenreich"
                     width="512" height="512"
                     decoding="async"
@@ -44,7 +44,7 @@
                 <p>I consider my life as an Eagle Scout to be among the most important. Becoming an Eagle Scout took a decade of my life. Long trips—canoeing in Minesota , trekking in Northern Sweden, it taught me – a spoiled kid – that I couldn't simply complain to make my way out of discomfort. I learned to work really hard, for a long period of time. I consider Scouting to be my source of grit, determination, and willpower.</p>
                 <figure class="wide-media">
                     <img
-                        src="https://i.postimg.cc/qzDxkrJZ/Eagle-Scout-Project.png"
+                        src="public/images/EagleScoutProject.png"
                         alt="Eagle Scout project"
                         decoding="async"
                         loading="lazy"
@@ -60,7 +60,7 @@
                 <div class="media-grid">
                     <figure class="image-card">
                         <img
-                            src="https://i.postimg.cc/CzrsF0hr/Sweden-Nature-Photo.png"
+                            src="public/images/SwedenNaturePhoto.png"
                             alt="Northern Sweden nature scene"
                             decoding="async"
                             loading="lazy"
