--- a/index.html
+++ b/index.html
@@ -34,14 +34,15 @@
         <div class="card" data-card="2">
             <div class="card-content">
                 <h2>What I'm Drawn To</h2>
-                <p>I'm drawn to the puzzle of efficiency. I think we should be able to use good information to make better decisions – in businesses, NGOs, and governments. That intersection of data, operations, and multi-variable decision-making is what I tend to be interested in.</p>
+                <p>I'm drawn to the puzzle of efficiency. I think we should be able to use good information to make better decisions – in businesses, NGOs, and governments.
+                     Solving complex problems and making difficult deicisons is what I tend to be interested in.</p>
             </div>
         </div>
 
         <div class="card" data-card="3">
             <div class="card-content">
                 <h2>Eagle Scout</h2>
-                <p>I consider my life as an Eagle Scout to be among the most important. Becoming an Eagle Scout took a decade of my life. Long trips—canoeing in Minesota , trekking in Northern Sweden, it taught me – a spoiled kid – that I couldn't simply complain to make my way out of discomfort. I learned to work really hard, for a long period of time. I consider Scouting to be my source of grit, determination, and willpower.</p>
+                <p>I consider being an Eagle Scout to be a big part of who I am. Becoming an Eagle Scout took a decade of my life. Long trips—canoeing in Minesota, trekking in Northern Sweden, it taught me – a spoiled kid – that I couldn't simply complain to make my way out of discomfort. I learned to work really hard, for a long period of time. I consider Scouting to be my source of grit, determination, and willpower.</p>
                 <figure class="wide-media">
                     <img
                         src="public/images/EagleScoutProject.png"
@@ -82,7 +83,7 @@
         <div class="card" data-card="6">
             <div class="card-content">
                 <h2>Now</h2>
-                <p>Right now, I'm an undergraduate studying business analytics and continuing to build tinker with side projects. I'm mostly focused on learning, understanding our world, and meeting interesting people.</p>
+                <p>Right now, I'm an undergraduate studying business and continuing to tinker with side projects. I'm mostly focused on learning, understanding our world, and meeting people I can learn from.</p>
             </div>
         </div>
 
