--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="card" data-card="3">
             <div class="card-content">
                 <h2>Eagle Scout</h2>
-                <p>I consider being an Eagle Scout to be a big part of who I am. Becoming an Eagle Scout took a decade of my life. Long trips—canoeing in Minesota, trekking in Northern Sweden, it taught me – a spoiled kid – that I couldn't simply complain to make my way out of discomfort. I learned to work really hard, for a long period of time. I consider Scouting to be my source of grit, determination, and willpower.</p>
+                <p>I consider being an Eagle Scout to be a big part of who I am. Becoming an Eagle Scout took a decade of my life. Long trips—canoeing in Minnesota, trekking in Northern Sweden, it taught me – a spoiled kid – that I couldn't simply complain to make my way out of discomfort. I learned to work really hard, for a long period of time. I consider Scouting to be my source of grit, determination, and willpower.</p>
                 <figure class="wide-media">
                     <img
                         src="public/images/EagleScoutProject.png"
