--- a/index.html
+++ b/index.html
@@ -1,59 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Charles Freidenreich</title><link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect width='64' height='64' fill='%23000'/%3E%3Ctext x='32' y='44' text-anchor='middle' font-size='36' font-family='monospace' fill='%23fff'%3EC%3C/text%3E%3C/svg%3E"><link rel="stylesheet" href="styles.css"></head><body><main><div class="row"><div class="col-text"><h1>Charles Freidenreich</h1><section><h2>About</h2><ul><li>Business undergraduate</li><li>Interested in AI and business</li><li>Eagle Scout</li><li>Record hike: 29 miles, 15,000ft elevation in one day</li></ul></section><section><h2>Now</h2><ul><li>Studying business</li><li>Working on AI projects</li><li>Learning as much as I can, as quickly as possible</li></ul></section></div><div class="col-img"><img src="public/images/FrontalPhotoOfMe.png" alt="Charles Freidenreich" class="photo-large"></div></div><div class="row reverse"><div class="col-text"><section><h2>Scouting</h2><ul><li>Backpacking, canoeing, sailing; Sweden, Minnesota, Florida</li><li>Learned grit and determination through extended discomfort</li><li>Care deeply about remote outdoor areas</li></ul></section></div><div class="col-img"><img src="public/images/SwedenNaturePhoto.png" alt="Northern Sweden" class="photo-large"></div></div><div class="row"><div class="col-text"><section><h2>Contact</h2><ul><li><a href="https://linkedin.com/in/charles-freidenreich" target="_blank">LinkedIn</a></li><li><a href="#" id="email-link">Email</a></li><li><a href="https://github.com/itbcharles" target="_blank">GitHub</a></li><li><a href="https://instagram.com/charles.freiden" target="_blank">Instagram</a></li></ul></section></div></div><div id="captcha" hidden><p>Verify: <span id="q"></span> = ?</p><input type="text" id="ans" autocomplete="off"><button id="verify">Submit</button><button id="close">Cancel</button><p id="email-result"></p></div></main><script src="script.js"></script></body></html>
-<!--                                                                              
-          ::::::::::::::::+xxx;;+xxxXx:::::::::::::::::::::::::::::::::          
-          ::::::::::::::;Xx+;:::;;:::;+++;:::::::::::::::::::::::::::::          
-          :::::::::::;x+X$$X+xxx;::::::::::X&X:::::::::::::::::::::::::          
-          :::::::::::+$&&&&x+xxxXXxx;:::;:+$&&x::::::::::::::::::::::::          
-          ::::::::::;$&&&&&&&&&&&$$$XX$$x;;;+xXXx::::::::::::::::::::::          
-          :::::::::::x$&&&&&&&&&&&&&&&&&$$+;:::;;X&+:::::::::::::::::::          
-          :::::::::::x$&$x:::+X$&&&$&&&&&&$+;xX;;;$&+::::::::::::::::::          
-          :::::::::::::+;++::::+&&$xX&&&&&x;x;;;:::+;::::::::::::::::::          
-          ::::::::::::xx;::::::;&XX$$&&&&x;+xXX;:::;;::::::::::::::::::          
-          :::::::::::+XX;:::::::+++X&&&&&XXXX&$x::x;:::::::::::::::::::          
-          :::::::::::::+::;:::::::+X&&&&&&&&&&&XX$+::::::::::::::::::::          
-          :::::::::::::+X+;;::::::;x&&&&&&&&&&&&$::::::::::::::::::::::          
-          ::::::::::::::;;:::::::;x$&$X&&&&&&&&X:::::::::::::::::::::::          
-          :::::::::::::::::::;;+xXx+Xx;;:;+X&$+::::::::::::::::::::::::          
-          ::::::::::::::$$XX$Xx+;:::::::::;x&x:::::::::::::::::::::::::          
-          :::::::::::::::::;X&&$+::::::::::+$$+::::::::::::::::::::::::          
-          :::::::::::::::::::x&Xx::::::::::;X&&&X::::::::::::::::::::::          
-          ::::::::::::::::::::X$+:::::::::::+$&&$+:::::::::::::::::::::          
-          ::::::::::::::::::::+&+:::::::::::x&&X::+::::::::::::::::::::          
-          :::::::::::::::::::::$X::::;;+xX$&$XxX$X;;:::::::::::::::::::          
-          ::::::::::::::::::::&&&$XxxxXXXxxxx$&&&&xX;::::::::::::::::::          
-          :::::::::::::::::::;XX&&XXXXX$$$$X+::::X&&Xx:::::::::::::::::          
-          :::::::::::::::::::+X$$Xx+;:::::::::::::;x&&X::::::::::::::::          
-          :::::::::::::::::::+x+;::::::;;;+:::::::::;x&&;::::::::::::::          
-          :::::::::::::::::::xx;:::::+XxXx:::::::::;;;+&X::::::::::::::          
-          :::::::::::::::::::xx;::::;xXX$:::::::::::+++X&$:::::::::::::          
-          ::::::::::::::::::;Xx+:::::+X$;::::::::::::+++X&X::::::::::::          
-          ::::::::::::::::::+XX+::::::XX;::::::::::::;+;;$&X:::::::::::          
-          ::::::::::::::::::x$X+::::::x+::::;::::::::::;+X$&+::::::::::          
-          ::::::::::::::::::x$x;::::::++;:;;;:::::;+xXX$$$&&&+:::::::::          
-          :::::::::::::::::;X$x;::::::;+++++;::::::::+XXXXXX&$+::::::::          
-          :::::::::::::::::;XXx;:::::::+$Xx+;:::::x&&$$XX&&&&&x::::::::          
-          :::::::::::::::::;XX+;:::::::+X$X+;:::x$&$Xx;:::x$&&x::::::::          
-          :::::::::::::::::;Xx+:::::::::+XXx;:::x$X+;::::::+X$$;:::::::          
-          :::::::::::::::::;x+;:::::::::;X$X;:+$$X+:::::::::++++:::::::          
-          :::::::::::::::::+++::::::::::;&&$XX&$Xx+::::::::::;+::::::::          
-          :::::::::::::::::++;::::::::::::;xx+X$x;+;::::::::::;;:::::::          
-          :::::::::::::::::++;::::::::::::::::::+x;;;:::::::::X&x::::::          
-          :::::::::::::::::+;::::::::::::::::::::+x;;++;:::::::+&$:::::          
-          ::::::::::::::::;;;::::::::::::::::::::::;;:+:::::::::;X+::::          
-          ::::::::::::::::;;:::::::::::::::::::::::$&&X::::::::::;x;:::          
-          ::::::::::::::::;;::::::::::::::::::::::&&$+::::::::::X&x::::          
-          ::::::::::::::::x;;:::::::::::::::::::;$&$;::::::::+$$x::::::          
-          :::::::::::::::+$x;::::::::::::::::::;$&X:::::::::$&X;:::::::          
-          :::::::::::::::X$x;:::::::::::::::::;&&X::::::::x&$+:::::::::          
-          ::::::::::::::+XX+::::::::::::::::::&&x::::::::&&x:::::::::::          
-          ::::::::::::::+Xx+:::::::::;+xxxXX$&$+:::::::X&$+::::::::::::          
-          :::::::::::::;+xx+;+;::::;++x$&X;::;:::::::;&&+::::::::::::::          
-          :::::::::::::X$$Xxx;:::;+x$&$x::::::;::::+XX+::::::::::::::::          
-          :::::::::::::$$&&X+::;+;+&&$+::::::;;;+X&&$X;::::::::::::::::          
-          ::::::::::::X&$x;:::+xxx$&&&x;;:::;x$&&&&x;::::::::::::::::::          
-          ::::::::::::XXXXXx+xxX$&&&XX$x;:::::x&&$x+:::::::::::::::::::          
-          :::::::::::::x++XX$&&&&&&$+::X&X;;x&&&&$x;:::::::::::::::::::          
-          ::::::::::::::+&&&&&$XXx+;:::::X$$$$$$$x+;:::::::::::::::::::          
-          :::::::::::::::xXXx+;::::::::::::;;+x+++;::::::::::::::::::::          
-          :::::::::::::::xXx+::::::::::::::::::::::::::::::::::::::::::          
--->
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Charles Freidenreich</title><link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect width='64' height='64' fill='%23000'/%3E%3Ctext x='32' y='44' text-anchor='middle' font-size='36' font-family='monospace' fill='%23fff'%3EC%3C/text%3E%3C/svg%3E"><link rel="stylesheet" href="styles.css"></head><body><main><div class="row"><div class="col-text"><h1>Charles Freidenreich</h1><section><h2>About</h2><ul><li>Business undergraduate</li><li>Interested in AI and business</li><li>Eagle Scout</li><li>Record hike: 29 miles, 15,000ft elevation in one day</li></ul></section><section><h2>Now</h2><ul><li>Studying business</li><li>Working on AI projects</li><li>Learning as much as I can, as quickly as possible</li></ul></section></div><div class="col-img"><img src="public/images/FrontalPhotoOfMe.png" alt="Charles Freidenreich" class="photo-large"></div></div><div class="row reverse"><div class="col-text"><section><h2>Scouting</h2><ul><li>Backpacking, canoeing, sailing; Sweden, Minnesota, Florida</li><li>Learned grit and determination through extended discomfort</li><li>Care deeply about remote outdoor areas</li></ul></section></div><div class="col-img"><img src="public/images/SwedenNaturePhoto.png" alt="Northern Sweden" class="photo-large"></div></div><div class="row"><div class="col-text"><section><h2>Contact</h2><ul><li><a href="https://linkedin.com/in/charles-freidenreich" target="_blank">LinkedIn</a></li><li>cafreidenreich AT gmail DOT com</li><li><a href="https://github.com/itbcharles" target="_blank">GitHub</a></li><li><a href="https://instagram.com/charles.freiden" target="_blank">Instagram</a></li></ul></section></div></div></main></body></html>
