--- a/argus/index.html
+++ b/argus/index.html
@@ -687,7 +687,7 @@
     </div>
 
     <script>
-        const API_URL = "/Users/charlesfreidenreich/Desktop/Developer/Argus/index.html";
+        const API_URL = "https://argus-production.up.railway.app";
         const REQUEST_TIMEOUT_MS = 12 * 60 * 1000;
         const PREVIEW_ROWS = 8;
 
